--- a/index.html
+++ b/index.html
@@ -5,57 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Calculator | Restart Networks</title>
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
 
-	<div class="container">
-		<div class="row align-items-center">
-			<div class="col-4"></div>
-		    <div class="col-4 text-center">
+	<div class="container body">
+		<div class="row cn">
+            <!-- <div class="col-xs-hidden col-sm-1 col-md-3"></div> -->
+		    <div class="col-md-6 col-sm-8 col-xs-12">
 
 				<div class="row" id="lcd">
-					<div class="col-12">
+					<div class="col-xs-12">
 						<div id="screen" class="text-left" data-h="80">LCD ON</div>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-8">
+					<div class="col-xs-8">
 						<div class="row numpad">
-							<div class="key btn btn-default col-4">1</div>
-							<div class="key btn btn-default col-4">2</div>
-							<div class="key btn btn-default col-4">3</div>
-							<div class="key btn btn-default col-4">4</div>
-							<div class="key btn btn-default col-4">5</div>
-							<div class="key btn btn-default col-4">6</div>
-							<div class="key btn btn-default col-4">7</div>
-							<div class="key btn btn-default col-4">8</div>
-							<div class="key btn btn-default col-4">9</div>
-							<div class="key btn btn-default col-4">
+							<div class="key btn btn-default col-xs-4">1</div>
+							<div class="key btn btn-default col-xs-4">2</div>
+							<div class="key btn btn-default col-xs-4">3</div>
+							<div class="key btn btn-default col-xs-4">4</div>
+							<div class="key btn btn-default col-xs-4">5</div>
+							<div class="key btn btn-default col-xs-4">6</div>
+							<div class="key btn btn-default col-xs-4">7</div>
+							<div class="key btn btn-default col-xs-4">8</div>
+							<div class="key btn btn-default col-xs-4">9</div>
+							<div class="key btn btn-default col-xs-4">
 								-/+
 							</div>
-							<div class="key btn btn-default col-4">0</div>
-							<div class="key btn btn-default col-4">.</div>
+							<div class="key btn btn-default col-xs-4">0</div>
+							<div class="key btn btn-default col-xs-4">.</div>
 						</div>
 					</div>
-					<div class="col-4">
-						<div class="key btn btn-warning col-12">+</div>
-						<div class="key btn btn-warning col-12">-</div>
-						<div class="key btn btn-warning col-12">÷</div>
-						<div class="key btn btn-warning col-12">x</div>
+					<div class="col-xs-4">
+						<div class="key btn btn-warning col-xs-12">+</div>
+						<div class="key btn btn-warning col-xs-12">-</div>
+						<div class="key btn btn-warning col-xs-12">÷</div>
+						<div class="key btn btn-warning col-xs-12">x</div>
 					</div>
-					<div class="col-12">
+					<div class="col-xs-12">
 						<div class="row extera">
-							<div class="key btn btn-danger col-3">CE</div>
-							<div class="key btn btn-default col-3">BCK</div>
-							<div class="key btn btn-info col-6 equal">=</div>
+							<div class="key btn normal btn-danger col-xs-3">CE</div>
+							<div class="key btn normal btn-default col-xs-3">BCK</div>
+							<div class="key btn equal btn-info col-xs-6">=</div>
 						</div>
 					</div>
 				</div>
 
 				<div class="row text-center">
-					<div class="col-12">
+					<div class="col-xs-12">
 						<a href="" id="myModal" data-toggle="modal" data-target="#exampleModal">Shortcuts</a>
 						|
 						<a href="https://github.com/shahrokhnabavi/calculator" target="_blank">Github</a>
@@ -74,7 +74,7 @@
 
 
 		    </div>
-			<div class="col-4"></div>
+            <!-- <div class="col-xs-hidden col-sm-1 col-md-3"></div> -->
 		</div>
 	</div>
 
@@ -106,9 +106,8 @@
   </div>
 </div>
 
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script src="js/calculator.js" type="text/javascript"></script>
 
 </body>
