relocate the address of script in the react calculator page

--- a/react/index.html
+++ b/react/index.html
@@ -2,7 +2,7 @@
     <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
     <title>Calculator - React | Restart Networks</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link href="/static/css/main.5189f60a.css" rel="stylesheet"></head><body>
+    <link href="/react/static/css/main.5189f60a.css" rel="stylesheet"></head><body>
         <div class="container body"><div class="row cn" id="root"></div></div>
-        <script type="text/javascript" src="/static/js/main.6d848bf0.js"></script>
+        <script type="text/javascript" src="/react/static/js/main.6d848bf0.js"></script>
     </body></html>
